# ser

experimental/: HACKING  README
experimental/ldap/: Makefile  README  TODO  ldap.c  ldap.h
experimental/osp/: globals.c  orig_transaction.c  osp_mod.c  osp_mod.h  provider.c  sipheader.c  term_transaction.c  usage.h
experimental/path/: Makefile  README  TODO  config.h  path.c  path.h
experimental/tls/: README.TLS  TODO.TLS  tls_config.c  tls_config.h  tls_domain.c  tls_domain.h  tls_init.c  tls_init.h  tls_server.c  tls_server.h
gsm_auth/: README
gsm_auth/kphone/: ChangeLog  kphone-3.11.patch
gsm_auth/sip_router/: auth.patch  parser.patch
migrate_db/: README  acc.py  admin_privileges.py  common.py  cpl.py  did.py  domain.py  grp.py  migrate_ser_db.py  msilo.py  parse_uri.py  phonebook.py  subscribers.py  uid.py  ul.py  uri.py  usr_preferences.py  uuid.py
new import/: acc.py  admin_privileges.py  common.py  cpl.py  did.py  domain.py  grp.py  migrate_ser_db.py  msilo.py  parse_uri.py  phonebook.py  subscribers.py  uid.py  ul.py  uri.py  usr_preferences.py  uuid.py
obsolete/snmp/: Makefile  add_table.sh  agent.c  applTable.c  applTable.h  mib2c.sipdataset.conf  sipCommonCfgBase.c  sipCommonCfgBase.h  sipCommonCfgExpires.c  sipCommonCfgExpires.h  sipCommonCfgRetry.c  sipCommonCfgRetry.h  sipCommonCfgTable.c  sipCommonCfgTable.h  sipCommonCfgTimer.c  sipCommonCfgTimer.h  sipCommonStatsMethod.c  sipCommonStatsMethod.h  sipCommonStatsOther.c  sipCommonStatsOther.h  sipCommonStatsRetry.c  sipCommonStatsRetry.h  sipCommonStatsSummary.c  sipCommonStatsSummary.h  sipCommonStatsTrans.c  sipCommonStatsTrans.h  sipCommonStatusCode.c  sipCommonStatusCode.h  sipProxyCfg.c  sipProxyCfg.h  sipProxyStats.c  sipProxyStats.h  sipRegCfg.c  sipRegCfg.h  sipRegStats.c  sipRegStats.h  sipServerCfg.c  sipServerCfg.h  snmp_handler.c  snmp_handler.h  (+2 more)
obsolete/weather/: acc.cfg  ccdiversion.cfg  ctd.sh  exec.cfg  exec_s3.cfg  exec_s4.cfg  exec_s5b.cfg  onr.cfg  pstn.cfg  redirect.cfg  uas.cfg
obsolete/weather/weather/wm918/wx200d-1.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.data.in  Makefile.in  NEWS  README  TODO  acconfig.h  buffer.c  client.c  config.h.in  configure  configure.in  fixtime.in  format.c  gstripchart.conf  mkinstalldirs  parse.c  parse.h  pg_api.c  pg_api.h  serial.c  serial.h  tab.c  unit.c  wmr918.TODO  wmr918.h  wmr918.txt  wmr918util.c  wunderground.in  wx200.1  wx200.c  wx200.h  wx200.txt  wx200d.5  wx200d.5.in  wx200d.8  wx200d.8.in  wx200d.c  (+16 more)
project_doc/cvs_policy/: cvs_policy.css  cvs_policy.xml
ser_artwork/: README
ser_artwork/psd/: no_text.psd  no_text_no_shadow.psd  rtpproxy.psd  sems.psd  ser.psd  ser_powered.psd  serweb.psd
ser_objdump/: Makefile  select.c  select.h  ser_objdump.c  ser_objdump.h  ser_objdump_all.sh  stack.c  stack.h  str.h
serctl/: BUGS  ChangeLog  Makefile  README  TODO  ctlser  ser_attr  ser_cred  ser_ctl  ser_db  ser_domain  ser_rpc  ser_uri  ser_user  serctl.conf  serxmlrpc.3
serctl/debian/: changelog  control  rules
serctl/man/: Makefile  ser_cred.1.pod  ser_ctl.1.pod  ser_domain.1.pod  ser_uri.1.pod  ser_user.1.pod  serctl.1.pod  serxmlrpc.3.pod
serctl/serctl/: __init__.py  binrpc.py  config.py  ctlattr.py  ctlcred.py  ctlctl.py  ctldb.py  ctldomain.py  ctlhelp.py  ctlraw.py  ctlrpc.py  ctluri.py  ctluser.py  dbany.py  dbbase.py  dbmysql.py  dbpostgres.py  dbsql.py  error.py  flag.py  main.py  opsql.py  options.py  serxmlrpc.py  serxmlrpclib.py  uniqid.py  uri.py  utils.py
sip_router/: .cfg_parser.c.swp  .cfg_parser.h.swp  .main.c.swp  .msg_parser.c.swp  .msg_parser.h.swp  .parser_f.c.swp  .parser_f.h.swp  .route.c.swp  .route.h.swp  .sip_router.cfg.swp  AUTHORS  INSTALL  ISSUES  Makefile  Makefile.cfg  Makefile.defs  Makefile.doc  Makefile.libs  Makefile.modules  Makefile.radius  Makefile.rules  Makefile.shared  Makefile.sources  Makefile.targets  NEWS  README  README-MODULES  TODO  action.c  action.h  atomic_ops.c  atomic_ops.h  atomic_ops_init.h  basex.c  basex.h  bat.cfg  bit_scan.c  bit_scan.h  ccver.sh  cfg.lex  (+169 more)
sip_router/atomic/: atomic_alpha.h  atomic_arm.h  atomic_common.h  atomic_mips2.h  atomic_native.h  atomic_ppc.h  atomic_sparc.h  atomic_sparc64.h  atomic_unknown.h  atomic_x86.h
sip_router/cfg/: cfg.c  cfg.h  cfg_ctx.c  cfg_ctx.h  cfg_script.c  cfg_script.h  cfg_select.c  cfg_select.h  cfg_struct.c  cfg_struct.h
sip_router/db/: db.c  db.h  db_cap.h  db_cmd.c  db_cmd.h  db_con.c  db_con.h  db_ctx.c  db_ctx.h  db_drv.c  db_drv.h  db_fifo.c  db_fifo.h  db_fld.c  db_fld.h  db_gen.c  db_gen.h  db_id.c  db_id.h  db_key.h  db_pool.c  db_pool.h  db_rec.c  db_rec.h  db_res.c  db_res.h  db_row.h  db_uri.c  db_uri.h  db_val.h
sip_router/debian/: init.d  postinst  postrm  rules  ser.init
sip_router/doc/: cfg.txt  cvs-commit-rules.txt  dns.txt  doc_root.xml  dst_blacklist.txt  locking.txt  logging-api.txt  modules_init.txt  (+5 more)
(+1588 files in other folders)
